--- a/pay-ui/src/app/app.component.html
+++ b/pay-ui/src/app/app.component.html
@@ -1,17 +1,20 @@
-<div *ngIf="isLoggedIn" id="headerLayout">
-    <div class="col-md-2 pull-right" style="margin-right:1%;margin-top:8px;">
-         <a class="login-a-user" (click)="togglepop()">
-            <i class="fa fa-user-circle-o" aria-hidden="true"></i>&nbsp; 
-            <span style="font-size:15px;">Hi, {{loginUser}} krishnaMohan</span>
-            <span  style="font-size:15px;" class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
+<div id="headerLayout">
+    <div *ngIf="isLoggedIn" class="col-md-2 pull-right" style="margin-right:1%;margin-top:8px;">
+        <a class="login-a-user" (click)="togglepop()">
+            <i class="fa fa-user-circle-o" aria-hidden="true"></i>&nbsp;
+            <span style="font-size:15px;">Hi, {{loginUser}}</span>
+            <span style="font-size:15px;" class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
         </a>
         <div class="dropdownChild" [hidden]="isPopIn">
             <ul>
                 <li>
                     <a [routerLink]="['/editcustomer']" class="dropdown-item">
-                        <i class="fa fa-user-circle-o" aria-hidden="true"></i>&nbsp;Edit Profile</a></li>
-                <li><a class="dropdown-item" (click)="logout()">
-                        <i class="fa fa-sign-out" aria-hidden="true"></i>&nbsp;Logout</a></li>
+                        <i class="fa fa-user-circle-o" aria-hidden="true"></i>&nbsp;Edit Profile</a>
+                </li>
+                <li>
+                    <a class="dropdown-item" (click)="logout()">
+                        <i class="fa fa-sign-out" aria-hidden="true"></i>&nbsp;Logout</a>
+                </li>
             </ul>
         </div>
     </div>
@@ -59,6 +62,6 @@
 <spinner [spinner]="spinkit.skDoubleBounce" [backgroundColor]="'#337ab7'">
 </spinner>
 
-<nav *ngIf="isLoggedIn" class="navbar navbar-default navbar-fixed-bottom" role="navigation">
-        <p class="text-center" style="margin-top:1%;">Copyright © 2017 Company. All rights reserved.</p>
-      </nav>
+<nav id="footer" class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+    <p class="text-center" style="margin-top:1%;">Copyright © 2017 Company. All rights reserved.</p>
+</nav>
