--- a/pay-ui/src/app/customer/customer.component.html
+++ b/pay-ui/src/app/customer/customer.component.html
@@ -8,9 +8,9 @@
 
         <div class="col-sm-5">
 
-            Current Balance: {{walletBalance}}
+            Wallet Balance: {{walletBalance}}
             <br>
-            <input type="button" value="PAY" (click)="gotoPayment()">
+            <input type="button" value="TopUp" (click)="gotoPayment()">
         </div>
 
         <div class="col-sm-7">
@@ -87,7 +87,7 @@
                         <div class="col-md-2"></div>
                         <div class=" col-md-4 col-md-offset-2 ">
                             <span>
-                            <button  class="btn btn-primary" type="button" (click)="editCustomer()" >Edit</button>
+                            <button  class="btn btn-primary" type="button" (click)="editCustomer()" >Edit Profile</button>
                         </span>
 
                         </div>
