--- a/pay-ui/src/styles.css
+++ b/pay-ui/src/styles.css
@@ -20,7 +20,7 @@
 /* login, registration start*/
 
 body {
-    padding-top:1px;
+    padding-top: 1px;
     background-color: #fafafa;
 }
 
@@ -33,11 +33,8 @@ body {
 }
 
 .panel-login {
-    /* border-color: #ccc; 
-     -webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2); */
-    margin-top: 90px;
+    margin-top: 17px;
+    padding-top: 4px;
     -webkit-box-shadow: 0px 2px 3px 0px #eee;
     -moz-box-shadow: 0px 2px 3px 0px #eee;
     box-shadow: 0px 2px 3px 0px #eee;
@@ -145,6 +142,14 @@ body {
     color: #fff;
     background-color: #1CA347;
     border-color: #1CA347;
+}
+
+.form-group {
+    margin-bottom: 10px;
+}
+
+.panel-body {
+    padding: 9px 15px 7px 15px;
 }
 
 
