--- a/pay-ui/src/app/edit-customer/edit-customer.component.html
+++ b/pay-ui/src/app/edit-customer/edit-customer.component.html
@@ -1,187 +1,177 @@
-<div class="panel panel-primary">
-    <p-messages [(value)]="msgs"></p-messages>
-    <div class="panel-heading">
-        Update Customer Details!
-    </div>
-    <div class="panel-body">
-        <form class="form-horizontal" novalidate (ngSubmit)="update()" [formGroup]="customerForm">
-            <fieldset>
+<p-messages [(value)]="msgs">
+</p-messages>
 
-
-
-                <div class="form-group">
-                    <label class="col-md-3 control-label" for="titleId">Title</label>
-
-                    <div class="col-md-5">
-
-
-                        <select class="form-control" id="titleId" formControlName="title" name="state">
+<div class="col-md-6 col-md-offset-3">
+    <div class="panel panel-login">
+        <div class="panel-heading">
+            <div class="row">
+                <div class="col-xs-12">
+                    <a class="active">Edit Profile</a>
+                </div>
+            </div>
+            <hr>
+        </div>
+        <div class="panel-body">
+            <div class="row">
+                <div class="col-lg-12">
+                    <form class="form-horizontal" novalidate (ngSubmit)="update()" [formGroup]="customerForm">
+                        <fieldset>
+                            <div class="form-group">
+                                <label class="col-md-3 control-label" for="titleId">Title</label>
+                                <div class="col-md-5">
+                                    <select class="form-control" id="titleId" formControlName="title" name="state">
                                 <option value="" disabled selected hidden>Select a Title...</option>
                                 <option value="Mr">Mr</option>
                                 <option value="Miss">Miss</option>
                                 <option value="Mrs">Mrs</option>
                                 <option value="Madam">Madam</option>
                             </select>
-
-                    </div>
-                </div>
-
-
-                <div class="form-group" [ngClass]="{'has-error': (customerForm.get('firstName').touched || 
+                                </div>
+                            </div>
+                            <div class="form-group" [ngClass]="{'has-error': (customerForm.get('firstName').touched || 
                                               customerForm.get('firstName').dirty) &&
                                               !customerForm.get('firstName').valid }">
-                    <label class="col-md-3 control-label label-disabled" for="firstNameId">First Name</label>
+                                <label class="col-md-3 control-label label-disabled" for="firstNameId">First Name</label>
 
-                    <div class="col-md-5">
-                        <input disabled=true class="form-control" id="firstNameId" type="text" placeholder="First Name (required)" formControlName="firstName" />
-                        <span class="help-block" *ngIf="(customerForm.get('firstName').touched || 
+                                <div class="col-md-5">
+                                    <input disabled=true class="form-control" id="firstNameId" type="text" placeholder="First Name (required)" formControlName="firstName" />
+                                    <span class="help-block" *ngIf="(customerForm.get('firstName').touched || 
                                                          customerForm.get('firstName').dirty) && 
                                                          customerForm.get('firstName').errors">
                             <span *ngIf="customerForm.get('firstName').errors.required">
                                 Please enter your first name.
                             </span>
-                        <span *ngIf="customerForm.get('firstName').errors.minlength">
+                                    <span *ngIf="customerForm.get('firstName').errors.minlength">
                                 The first name must be longer than 3 characters.
                             </span>
-                        </span>
-                    </div>
-                </div>
+                                    </span>
+                                </div>
+                            </div>
 
-
-
-
-
-
-
-
-
-
-                <div [hidden]="!showMiddle" class="form-group" [ngClass]="{'has-error': (customerForm.get('middleName').touched || 
+                            <div [hidden]="!showMiddle" class="form-group" [ngClass]="{'has-error': (customerForm.get('middleName').touched || 
                                               customerForm.get('middleName').dirty) &&
                                               !customerForm.get('middleName').valid }">
-                    <label class="col-md-3 control-label" for="middleNameId">Middle Name</label>
+                                <label class="col-md-3 control-label" for="middleNameId">Middle Name</label>
 
-                    <div class="col-md-5">
-                        <input class="form-control" id="middleNameId" type="text" placeholder="Middle Name (optional)" formControlName="middleName" />
-                    </div>
-                </div>
+                                <div class="col-md-5">
+                                    <input class="form-control" id="middleNameId" type="text" placeholder="Middle Name (optional)" formControlName="middleName" />
+                                </div>
+                            </div>
+                            <div class="form-group" [ngClass]="{'has-error': (customerForm.get('lastName').touched || customerForm.get('lastName').dirty) && !customerForm.get('lastName').valid }">
+                                <label class="col-md-3 control-label label-disabled" for="lastNameId">Last Name</label>
 
-
-                <div class="form-group" [ngClass]="{'has-error': (customerForm.get('lastName').touched || customerForm.get('lastName').dirty) && !customerForm.get('lastName').valid }">
-                    <label class="col-md-3 control-label label-disabled" for="lastNameId">Last Name</label>
-
-                    <div class="col-md-5">
-                        <input disabled=true class="form-control" id="lastNameId" type="text" placeholder="Last Name (required)" formControlName="lastName" />
-                        <span class="help-block" *ngIf="(customerForm.get('lastName').touched || customerForm.get('lastName').dirty) && customerForm.get('lastName').errors">
+                                <div class="col-md-5">
+                                    <input disabled=true class="form-control" id="lastNameId" type="text" placeholder="Last Name (required)" formControlName="lastName" />
+                                    <span class="help-block" *ngIf="(customerForm.get('lastName').touched || customerForm.get('lastName').dirty) && customerForm.get('lastName').errors">
                             <span *ngIf="customerForm.get('lastName').errors.required">
                                 Please enter your last name.
                             </span>
-                        <span *ngIf="customerForm.get('lastName').errors.maxlength">
+                                    <span *ngIf="customerForm.get('lastName').errors.maxlength">
                                 The last name must be less than 50 characters.
                             </span>
-                        </span>
-                    </div>
-                </div>
+                                    </span>
+                                </div>
+                            </div>
 
 
-                <div class="form-group" [ngClass]="{'has-error': (customerForm.get('preferredName').touched || 
+                            <div class="form-group" [ngClass]="{'has-error': (customerForm.get('preferredName').touched || 
                                               customerForm.get('preferredName').dirty) &&
                                               !customerForm.get('preferredName').valid }">
-                    <label class="col-md-3 control-label label-disabled" for="preferredNameId">Preferred Name</label>
+                                <label class="col-md-3 control-label label-disabled" for="preferredNameId">Preferred Name</label>
 
-                    <div class="col-md-5">
-                        <input disabled=true class="form-control" id="preferredNameId" type="text" placeholder="Preferred Name (optional)" formControlName="preferredName" />
-                    </div>
-                </div>
-
-
+                                <div class="col-md-5">
+                                    <input disabled=true class="form-control" id="preferredNameId" type="text" placeholder="Preferred Name (optional)" formControlName="preferredName" />
+                                </div>
+                            </div>
 
 
 
-                <div class="form-group" [ngClass]="{'has-error': (customerForm.get('email').touched || customerForm.get('email').dirty) && !customerForm.get('email').valid }">
-                    <label class="col-md-3 control-label label-disabled" for="emailId">Email Address</label>
 
-                    <div class="col-md-5">
-                        <input disabled=true class="form-control" id="emailId" type="text" placeholder="Email Address (required)" formControlName="email" />
-                        <span class="help-block" *ngIf="(customerForm.get('email').touched || customerForm.get('email').dirty) && customerForm.get('email').errors">
+
+                            <div class="form-group" [ngClass]="{'has-error': (customerForm.get('email').touched || customerForm.get('email').dirty) && !customerForm.get('email').valid }">
+                                <label class="col-md-3 control-label label-disabled" for="emailId">Email Address</label>
+
+                                <div class="col-md-5">
+                                    <input disabled=true class="form-control" id="emailId" type="text" placeholder="Email Address (required)" formControlName="email" />
+                                    <span class="help-block" *ngIf="(customerForm.get('email').touched || customerForm.get('email').dirty) && customerForm.get('email').errors">
                             <span *ngIf="customerForm.get('email').errors.required">
                                 Please enter your email address.
                             </span>
-                        <span *ngIf="customerForm.get('email').errors.pattern">
+                                    <span *ngIf="customerForm.get('email').errors.pattern">
                                 Please enter a valid email address.
                             </span>
-                        </span>
-                    </div>
-                </div>
+                                    </span>
+                                </div>
+                            </div>
 
 
 
-                <div class="form-group" [ngClass]="{'has-error': (customerForm.get('phone').touched || 
+                            <div class="form-group" [ngClass]="{'has-error': (customerForm.get('phone').touched || 
                                               customerForm.get('phone').dirty) &&
                                               !customerForm.get('phone').valid }">
-                    <label class="col-md-3 control-label label-disabled" for="phoneId">Phone</label>
+                                <label class="col-md-3 control-label label-disabled" for="phoneId">Phone</label>
 
-                    <div class="col-md-5">
-                        <input disabled=true class="form-control" id="phoneId" type="tel" placeholder="Phone" formControlName="phone" />
-                        <span class="help-block" *ngIf="(customerForm.get('phone').touched || customerForm.get('phone').dirty) && customerForm.get('phone').errors">
+                                <div class="col-md-5">
+                                    <input disabled=true class="form-control" id="phoneId" type="tel" placeholder="Phone" formControlName="phone" />
+                                    <span class="help-block" *ngIf="(customerForm.get('phone').touched || customerForm.get('phone').dirty) && customerForm.get('phone').errors">
                             <span *ngIf="customerForm.get('phone').errors.required">
                                 Please enter your phone number.
                             </span>
-                        </span>
-                    </div>
-                </div>
+                                    </span>
+                                </div>
+                            </div>
 
-                <div class="form-group" [ngClass]="{'has-error': (customerForm.get('countryCode').touched || 
+                            <div class="form-group" [ngClass]="{'has-error': (customerForm.get('countryCode').touched || 
                                               customerForm.get('countryCode').dirty) &&
                                               !customerForm.get('countryCode').valid }">
-                    <label class="col-md-3 control-label label-disabled" for="countryCodephoneId">Mobile Country Code</label>
+                                <label class="col-md-3 control-label label-disabled" for="countryCodephoneId">Mobile Country Code</label>
 
-                    <div class="col-md-5">
-                        <input disabled=true class="form-control" id="countryCodeId" type="tel" placeholder="Mobile Country Code" formControlName="countryCode" />
-                        <span class="help-block" *ngIf="(customerForm.get('countryCode').touched || customerForm.get('countryCode').dirty) && customerForm.get('countryCode').errors">
+                                <div class="col-md-5">
+                                    <input disabled=true class="form-control" id="countryCodeId" type="tel" placeholder="Mobile Country Code" formControlName="countryCode" />
+                                    <span class="help-block" *ngIf="(customerForm.get('countryCode').touched || customerForm.get('countryCode').dirty) && customerForm.get('countryCode').errors">
                             <span *ngIf="customerForm.get('countryCode').errors.required">
                                 Please select your mobile country code.
                             </span>
-                        </span>
-                    </div>
-                </div>
+                                    </span>
+                                </div>
+                            </div>
 
-                <div class="form-group">
-                    <label class="col-md-3 control-label">Gender</label>
-                    <div class="col-md-5">
-                        <label class="radio-inline">
+                            <div class="form-group">
+                                <label class="col-md-3 control-label">Gender</label>
+                                <div class="col-md-5">
+                                    <label class="radio-inline">
                                 <input type="radio" 
                                        value="male" 
                                        formControlName = "gender"
                                        >Male
                             </label>
-                        <label class="radio-inline">
+                                    <label class="radio-inline">
                                 <input type="radio" 
                                        value="female" 
                                        formControlName = "gender"
                                        >Female
                             </label>
-                    </div>
-                </div>
+                                </div>
+                            </div>
 
 
 
 
-                <div class="form-group">
-                    <label class="col-md-3 control-label" for="nationalityId">Nationality</label>
+                            <div class="form-group">
+                                <label class="col-md-3 control-label" for="nationalityId">Nationality</label>
 
-                    <div class="col-md-5">
-                        <input class="form-control" id="nationalityId" type="text" placeholder="Nationality (optional)" formControlName="nationality" />
-                    </div>
-                </div>
+                                <div class="col-md-5">
+                                    <input class="form-control" id="nationalityId" type="text" placeholder="Nationality (optional)" formControlName="nationality" />
+                                </div>
+                            </div>
 
 
 
-                <br />
-                <div class="form-group">
-                    <div class="col-md-2"></div>
-                    <div class=" col-md-4 col-md-offset-2 ">
-                        <span>
+                            <br />
+                            <div class="form-group">
+                                <div class="col-md-2"></div>
+                                <div class=" col-md-4 col-md-offset-2 ">
+                                    <span>
                             <button class="btn btn-primary "
                                     type="submit "
                                     [disabled]="!customerForm.valid ">
@@ -189,9 +179,13 @@
                             </button>
                         </span>
 
-                    </div>
+                                </div>
+                            </div>
+                        </fieldset>
+                    </form>
+
                 </div>
-            </fieldset>
-        </form>
+            </div>
+        </div>
     </div>
 </div>
