--- a/pay-ui/src/styles.css
+++ b/pay-ui/src/styles.css
@@ -33,8 +33,10 @@ body {
 }
 
 .panel-login {
-    margin-top: 17px;
+    margin-top: 8px;
+    margin-bottom: 80px;
     padding-top: 4px;
+    padding-bottom: 10px;
     -webkit-box-shadow: 0px 2px 3px 0px #eee;
     -moz-box-shadow: 0px 2px 3px 0px #eee;
     box-shadow: 0px 2px 3px 0px #eee;
@@ -153,4 +155,4 @@ body {
 }
 
 
-/* end */
+/*  end */
