--- a/pay-ui/src/app/customer/customer.component.html
+++ b/pay-ui/src/app/customer/customer.component.html
@@ -1,132 +1,167 @@
-<div class="panel panel-primary">
-    <p-messages [(value)]="msgs"></p-messages>
+<p-growl [(value)]="msgs">
+</p-growl>
 
-    <div class="panel-body">
-
-        <div class="col-sm-5">
-
-            Wallet Balance: {{walletBalance}}
-            <br>
-
-            <div class="form-group">
-                <label class="col-md-4 control-label" for="amount">Enter amount</label>
-
-                <div class="col-md-6">
-                    <input class="form-control" id="amount" type="number" placeholder="Enter Amount (required)" [(ngModel)]="amount" />
+<div class="col-md-12">
+    <div class="panel panel-login">
+        <div class="panel-heading">
+            <div class="row">
+                <div class="col-xs-12">
+                    <a class="active">Account Overview</a>
                 </div>
             </div>
-
-            <button class="btn btn-primary" [disabled]="!amount" type="button" [routerLink]="['/payment', amount]">TopUp</button>
+            <hr>
         </div>
-
-        <div class="col-sm-7">
-            <form class="form-horizontal">
-                <fieldset>
-
-                    <div class="form-group">
-                        <label class="col-md-5 control-label" for="firstNameId">Title :</label>
-
-                        <div class="col-md-5">
-                            <label class="control-label label-alter">{{customer?.title}}</label>
-                            <!-- {{customer.firstName}} -->
-                        </div>
+        <div class="panel-body">
+            <div class="row">
+                <div class="col-sm-5">
+                    <div class="profile-pic">
+                        <i class="fa fa-user fa-6" aria-hidden="true"></i>
                     </div>
-
-                    <div class="form-group">
-                        <label class="col-md-5 control-label" for="firstNameId">First Name :</label>
-
-                        <div class="col-md-5">
-                            <label class="control-label label-alter">{{customer?.firstName}}</label>
-                            <!-- {{customer.firstName}} -->
+                    <div class="topup-box">
+                        <div class="wallet-box">
+                            <span class="wallet-text">Wallet Balance</span>: <span class="wallet-val">${{walletBalance}}</span>
                         </div>
-                    </div>
 
-                    <div class="form-group">
-                        <label class="col-md-5 control-label" for="middleNameId">Middle Name :</label>
-                        <div class="col-md-5">
-                            <label class="control-label label-alter">{{customer?.middleName}}</label>
-                            <!-- {{customer.middleName}} -->
+                        <div class="recharge-box">
+                            <p class="p-req">Request Wallet TopUp</p>
+                            <p class="p-enter">Enter TopUp Amount</p>
+                            <div class="text-input">
+                                <input class="form-control" id="amount" type="number" placeholder="Enter Amount (required)" [(ngModel)]="amount" />
+                            </div>
+
+                            <div class="proceed">
+                                <button class="btn btn-primary" [disabled]="!amount" type="button" [routerLink]="['/payment', amount]">Proceed To Payment</button>
+                            </div>
                         </div>
+
                     </div>
 
 
-                    <div class="form-group">
-                        <label class="col-md-5 control-label" for="lastNameId">Last Name :</label>
 
-                        <div class="col-md-5">
-                            <label class="control-label label-alter">{{customer?.lastName}}</label>
-                            <!-- {{customer.lastName}} -->
+                    <!-- Wallet Balance: {{walletBalance}}
+                    <br>
+                   <p>Request wallet TopUp</p>
+                    <p>Enter Topup Amount</p>
+                    <div class="col-md-8">
+                            <input class="form-control" id="amount" type="number" placeholder="Enter Amount (required)" [(ngModel)]="amount" />
                         </div>
-                    </div>
+                  <br>
+
+                    <button class="btn btn-primary" [disabled]="!amount" type="button" [routerLink]="['/payment', amount]">TopUp</button> -->
+                </div>
+
+                <div class="col-sm-7">
+                    <form class="form-horizontal">
+                        <fieldset>
+
+                            <div class="form-group">
+                                <label class="col-md-5 control-label" for="firstNameId">Title :</label>
+
+                                <div class="col-md-5">
+                                    <label class="control-label label-alter">{{customer?.title}}</label>
+                                    <!-- {{customer.firstName}} -->
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label class="col-md-5 control-label" for="firstNameId">First Name :</label>
+
+                                <div class="col-md-5">
+                                    <label class="control-label label-alter">{{customer?.firstName}}</label>
+                                    <!-- {{customer.firstName}} -->
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label class="col-md-5 control-label" for="middleNameId">Middle Name :</label>
+                                <div class="col-md-5">
+                                    <label class="control-label label-alter">{{customer?.middleName}}</label>
+                                    <!-- {{customer.middleName}} -->
+                                </div>
+                            </div>
 
 
-                    <div class="form-group">
-                        <label class="col-md-5 control-label" for="preferredNameId">Preferred Name :</label>
+                            <div class="form-group">
+                                <label class="col-md-5 control-label" for="lastNameId">Last Name :</label>
 
-                        <div class="col-md-5">
-                            <label class="control-label label-alter">{{customer?.preferredName}}</label>
-                            <!-- {{customer.preferredName}} -->
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-md-5 control-label" for="GenderId">Gender :</label>
-
-                        <div class="col-md-5">
-                            <label class="control-label label-alter">{{customer?.gender}}</label>
-                            <!-- {{customer.firstName}} -->
-                        </div>
-                    </div>
+                                <div class="col-md-5">
+                                    <label class="control-label label-alter">{{customer?.lastName}}</label>
+                                    <!-- {{customer.lastName}} -->
+                                </div>
+                            </div>
 
 
-                    <div class="form-group">
-                        <label class="col-md-5 control-label" for="emailId2">Email Address :</label>
+                            <div class="form-group">
+                                <label class="col-md-5 control-label" for="preferredNameId">Preferred Name :</label>
 
-                        <div class="col-md-5">
-                            <label class="control-label label-alter">{{customer?.email}}</label>
-                            <!-- {{customer.email}} -->
-                        </div>
-                    </div>
+                                <div class="col-md-5">
+                                    <label class="control-label label-alter">{{customer?.preferredName}}</label>
+                                    <!-- {{customer.preferredName}} -->
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-5 control-label" for="GenderId">Gender :</label>
 
-                    <div class="form-group">
-                        <label class="col-md-5 control-label" for="phoneId">Phone :</label>
-
-                        <div class="col-md-5">
-                            <label class="control-label label-alter">{{customer?.mobile}}</label>
-                            <!-- {{customer.mobile}} -->
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-md-5 control-label" for="countryCodephoneId">Mobile Country Code :</label>
-
-                        <div class="col-md-5">
-                            <label class="control-label label-alter">{{customer?.countryCode}}</label>
-                            <!-- {{customer.countryCode}} -->
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-md-5 control-label" for="GenderId">Nationality :</label>
-
-                        <div class="col-md-5">
-                            <label class="control-label label-alter">{{customer?.nationality}}</label>
-                            <!-- {{customer.firstName}} -->
-                        </div>
-                    </div>
+                                <div class="col-md-5">
+                                    <label class="control-label label-alter">{{customer?.gender}}</label>
+                                    <!-- {{customer.firstName}} -->
+                                </div>
+                            </div>
 
 
-                    <br />
-                    <div class="form-group">
-                        <div class="col-md-2"></div>
-                        <div class=" col-md-4 col-md-offset-2 ">
-                            <span>
+                            <div class="form-group">
+                                <label class="col-md-5 control-label" for="emailId2">Email Address :</label>
+
+                                <div class="col-md-5">
+                                    <label class="control-label label-alter">{{customer?.email}}</label>
+                                    <!-- {{customer.email}} -->
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label class="col-md-5 control-label" for="phoneId">Phone :</label>
+
+                                <div class="col-md-5">
+                                    <label class="control-label label-alter">{{customer?.mobile}}</label>
+                                    <!-- {{customer.mobile}} -->
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label class="col-md-5 control-label" for="countryCodephoneId">Mobile Country Code :</label>
+
+                                <div class="col-md-5">
+                                    <label class="control-label label-alter">{{customer?.countryCode}}</label>
+                                    <!-- {{customer.countryCode}} -->
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label class="col-md-5 control-label" for="GenderId">Nationality :</label>
+
+                                <div class="col-md-5">
+                                    <label class="control-label label-alter">{{customer?.nationality}}</label>
+                                    <!-- {{customer.firstName}} -->
+                                </div>
+                            </div>
+
+
+                            <br />
+                            <div class="form-group">
+                                <div class="col-md-2"></div>
+                                <div class=" col-md-4 col-md-offset-2 ">
+                                    <span>
                             <button  class="btn btn-primary" type="button" (click)="editCustomer()" >Edit Profile</button>
                         </span>
 
-                        </div>
-                    </div>
-                </fieldset>
-            </form>
+                                </div>
+                            </div>
+                        </fieldset>
+                    </form>
+                </div>
+
+
+            </div>
         </div>
     </div>
 </div>
