--- a/pay-ui/src/app/auth/register/register.component.html
+++ b/pay-ui/src/app/auth/register/register.component.html
@@ -71,10 +71,10 @@
             <div class="col-md-7">
                 <input class="form-control" id="emailId" type="text" placeholder="Email Address (required)" formControlName="email" />
                 <span class="help-block" *ngIf="(customerForm.get('email').touched || customerForm.get('email').dirty) && customerForm.get('email').errors">
-                            <span *ngIf="customerForm.get('email').errors.required">
+                            <span *ngIf="customerForm.get('email').errors?.required">
                                 Please enter your email address.
                             </span>
-                <span *ngIf="customerForm.controls.email.errors.pattern">
+                <span *ngIf="customerForm.controls.email.errors?.email">
                                 Please enter a valid email address.
                             </span>
                 </span>
