--- a/pay-ui/src/app/customer/customer.component.html
+++ b/pay-ui/src/app/customer/customer.component.html
@@ -26,7 +26,7 @@
                             <p class="p-req">Request Wallet TopUp</p>
                             <p class="p-enter">Enter TopUp Amount</p>
                             <div class="text-input">
-                                <input class="form-control" id="amount" type="number" placeholder="Enter Amount (required)" [(ngModel)]="amount" />
+                                <input class="form-control" id="amount" type="number" min="0" placeholder="Enter Amount (required)" [(ngModel)]="amount" />
                             </div>
 
                             <div class="proceed">
